# python-web-dev-with-htmx

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml  tailwind.config.js
src/app/: app.py  auth_router.py  chat_router.py  example_router.py  schemas.py  service.py  settings.py  utils.py
src/app/db/: __init__.py  db.py  models.py
static/: input.css  output.css
templates/: base.html  chat-base.html  chat-id-new-message.html  chat-id.html  chat.html  component-macros.html  icon-macros.html  login.html  signup.html
templates/example/: example-base.html  index.html
